Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114755

AppMan: IntentModel cannot be compiled

XMLWordPrintable

    • 965c57a2c (dev), cd0f71e22 (6.6)

      Code

      import QtQuick
      import QtApplicationManager.SystemUI
      
      Item {
          IntentModel { id: model }
          Component.onCompleted: model.invalidate()
      }
      

       

      qmllint/qmlsc output

      Warning: Main.qml:6:31: Member "invalidate" not found on type "IntentModel" [missing-property]
          Component.onCompleted: model.invalidate()
                                       ^^^^^^^^^^
      Warning: Main.qml:6:31: Could not compile binding for onCompleted: Type IntentModel of  does not have a property invalidate for calling [compiler]
          Component.onCompleted: model.invalidate()
                                       ^^^^^^^^^^
      

        For Gerrit Dashboard: QTBUG-114755
        # Subject Branch Project Status CR V

            rgriebl Robert Griebl
            skoh-qt Sze Howe Koh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes