Implement model invalidate() explicitly

This is mainly to be able to compile code that calls invalidate()
from the ApplicationModel or IntentModel types. There are still
methods that could be invoked from the QSortFilterProxyModel, but
this undocumented now.

Fixes: QTBUG-114755
Change-Id: Ifad3d4c5b4f93443875c3d29f052edfa094eb555
Reviewed-by: Robert Griebl <robert.griebl@qt.io>
(cherry picked from commit 965c57a2c306baac536dc82dcc77fdc1219cb497)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>